# nixosConfig

./: README.md  buildNixos.sh  flake.nix
NixShells/CurlReplacePure/: shell.nix
NixShells/agdaTemplate/: flake.nix
NixShells/cTemplate/: CMakeLists.txt  flake.nix
NixShells/clTemplate/: example.lsp  flake.nix
NixShells/clojureTemplate/: flake.nix
NixShells/cppTemplate/: .clang-format  CMakeLists.txt  flake.nix
NixShells/cppTemplate/.cache/clangd/index/: main.cpp.F10C33F179085E71.idx
NixShells/databaseTemplate/: flake.nix
NixShells/godotTemplate/: flake.nix
NixShells/haskellTemplate/: flake.nix
NixShells/javaTemplate/: flake.nix
NixShells/latexTemplate/: flake.nix
NixShells/msp430Template/: flake.nix
NixShells/ocamlTemplate/: flake.nix
NixShells/pythonTemplate/: flake.nix
NixShells/racketTemplate/: flake.nix
NixShells/rustTemplate/: flake.nix
NixShells/webdevTemplate/: flake.nix
common/: configuration.nix  localTr.nix  msp430-udev.nix  nixSettings.nix  packages.nix
common/display-protocol/: display-protocol.nix
common/kernelOptions/: default.nix
common/modules/: bundle.nix  default.nix  firejail.nix  firewall.nix  nix-flatpak.nix  nwmanager.nix  printer.nix
desktop1/: default.nix  hardware-configuration.nix
desktop1/bootloader/: bootloader.nix
desktop1/extraConfig/: cache-server.nix  default.nix  extraConfig.nix  nvidia.nix
laptop1/: default.nix  extra.nix
laptop1/extra/: attic.nix  extra.nix  flatpak.nix  guix.nix  mysqlserver.nix  steam.nix
laptop1/extra/customDeamons/test-deamon/: CMakeLists.txt  default.nix  flake.nix
laptop1/extra/customDeamons/test-deamon/.cache/clangd/index/: echo_client.c.4927BF4AC716BB4A.idx  echo_server.c.6E38EEB29EE61592.idx  getaddrinfo.c.CCAB58E5F5110DA3.idx
laptop1/extra/customDeamons/test-deamon/src/: echo_client.c  echo_server.c  getaddrinfo.c
laptop1/extra/customDeamons/test-deamon/src/week2/: hello_client.c  hello_client.py  hello_server.c  hello_server.py  ntp_client.c  out
nixos/: configuration.nix  hardware-configuration.nix  packages.nix
nixos/dm-wms/: dm-wms.nix
(+214 files in other folders)
